Prevent header FOUC by forcing the navigation not to wrap, but rather be clipped.

--- a/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/menu.pcss
@@ -7,6 +7,11 @@
 		order: unset;
 		padding-bottom: 0;
 		text-align: left;
+		overflow-x: clip;
+
+		&.has-overflow-menu {
+			overflow: visible;
+		}
 	}
 
 	& .wp-block-navigation__responsive-container-open {
@@ -48,6 +53,8 @@
 		padding: 0 0 var(--wp--custom--margin--vertical) 0;
 		row-gap: 0;
 		column-gap: 0;
+		flex-wrap: nowrap;
+		white-space: nowrap;
 
 		@media (--tablet) {
 			padding-bottom: 0;
@@ -115,7 +122,6 @@
 		padding-top: calc(var(--wp--style--block-gap) / 2);
 		padding-bottom: calc(var(--wp--style--block-gap) / 2);
 		border: none;
-		left: 0;
 
 		@media (--tablet) {
 			font-size: inherit;
